End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection":"Data source=datingapp.db"
   },
+  "TokenKey":"AshishDatingApp is Best App",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
