--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@schematics/angular": "^9.1.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "4.1.1",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
